working global exception